Fixed a form layout issue, fixed form button border issue

--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@
 		text-transform: uppercase;
 	}
 
+	.section-intro,
+	.services_details p {
+		line-height: 150%;
+	}
+
 	.section-intro {
 		text-align: center;
 	}
@@ -230,6 +235,7 @@
 
 	.slide-textbox p {
 		margin-top: 15px;
+		width: 75%;
 	}
 
 	.slide-textbox a {
@@ -369,6 +375,10 @@
 	h3,
 	.services_details p {
 		margin: 0;
+	}
+
+	.services_details p {
+		margin-top: 5px;
 	}
 
 	/* Services icons and icons circles */
@@ -540,7 +550,7 @@
 
 			.see_more_button {
 				cursor: pointer;
-				width: 20%;
+				width: 19%;
 				height: 67%;
 
 				position: absolute;
@@ -605,6 +615,11 @@
 
 	h6 {
 		margin: 10px 0 5px 0;
+	}
+
+
+	form {
+		width: 100%;
 	}
 
 	input,
@@ -882,6 +897,7 @@
 				width: 50%;
 				height: 25px;
 				background-color: #4DA0BC;
+				border: none;
 				box-shadow: 0px 3px 0px #468CAD;
 			}
 
@@ -1022,8 +1038,11 @@
 				height: 9%;
 				background-color: #4DA0BC;
 				margin-top: 15px;
-				font-size: 0.7rem;
 				box-shadow: 0px 3px 0px #468CAD;
+			}
+
+			.slide-textbox a:active {
+				box-shadow: 0px 3px 0px #4DA0BC;
 			}
 
 			/* Next & previous buttons */
@@ -1043,17 +1062,16 @@
 				justify-content: flex-start;
 				align-items: flex-start;
 				align-content: flex-start;
-				width: 100%;
 			}
 
 			#services img {
-				margin-left: 133px;
-				width: 32%;
+				margin-left: 60px;
+				width: 40%;
 				display: block;
 			}
 
 			.services_details {
-				margin: 50px 0 0 54px;
+				margin: 50px 0 0 60px;
 				width: 42%;
 				flex-direction: row;
 				flex-wrap: wrap;
@@ -1118,6 +1136,8 @@
 				width: 100%;
 				height: 100%;
 				position: absolute;
+				top: 0%;
+				left: 0%;
 				background-color: rgba(52, 145, 178, 0.2);
 			}
 
@@ -1125,6 +1145,7 @@
 				background-color: rgba(255, 255, 255, 0.8);
 				width: 25%;
 				height: 85%;
+				position: absolute;
 				top: 8%;
 				left: 64%;
 			}
